# livestreamer-gtkmm3

./: CMakeLists.txt  LICENSE  addStreamDialog.cpp  addStreamDialog.h  fileHelper.cpp  fileHelper.h  livestreamer-gtkmm3.desktop  livestreamerProcess.cpp  livestreamerProcess.h  main.cpp  mainWindow.cpp  mainWindow.h
UI/: mainWindow.glade
